swim_client/src/configuration/tests/resources/valid/client-config-retry-interval.recon
@config {
    @downlink_connections {
        dl_req_buffer_size: 8,
        buffer_size: 100,
        retry_strategy: @interval {
            delay: @duration {
                secs: 5,
                nanos: 0
            },
            retries: "infinite"
        },
        yield_after: 256
    }
}