swim_client/src/configuration/tests/resources/invalid/double-attr.recon
@config {
    @attribute
    @downlink_connections {
        dl_req_buffer_size: 8,
        buffer_size: 32,
        yield_after: 200,
        retry_strategy: @interval {
            delay: @duration {
                secs: 54,
                nanos: 0
            },
            retries: 13
        }
    },
    @remote_connections {
        router_buffer_size: 20,
        channel_buffer_size: 20,
        activity_timeout: @duration {
            secs: 60,
            nanos: 0
        },
        write_timeout: @duration {
            secs: 40,
            nanos: 0
        },
        connection_retries: @none,
        yield_after: 512
    },
}
